--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@
     transition: 2s;
     z-index: 9;
     left: 50%;
-    top: -50%;
+    top: -70%;
     box-shadow: 0px 0px 10px 3px #ccc;
     transform: translate(-50%,-40%);
 }
@@ -78,6 +78,66 @@
     margin-left: 120px;
 }
 
+/* signup page */
+
+.overlay1{
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+   height: 100vh;
+   position:fixed;
+   top: 0;
+   z-index: -1;
+   opacity: 1;
+   transition: 1s;
+}
+
+.Signup{
+    width: 506px;
+    height: 300px;
+    padding: 50px;
+    background-color: white;
+    position:absolute;
+    transition: 2s;
+    z-index: 9;
+    left: 50%;
+    top: 40%;
+    box-shadow: 0px 0px 10px 3px #ccc;
+    transform: translate(-50%,-40%);
+}
+.Signup p{
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-top: -30px;
+    margin-bottom: 30px;
+    margin-left: 15px;
+}
+
+.Signup input{
+    width: 100%;
+    height: 35px;
+    margin-bottom: 20px;
+}
+.Signup button{
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    margin-left: 130px;
+    width: 250px;
+    font-family: sans-serif;
+    font-size: large;
+    margin-top: 15px;
+}
+.Signup div label{
+    margin-left: 230px;
+    font-size: large;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.Signup h3{
+    text-align: center;
+    
+}
 
         /* TOP DISCOUNT */
 
@@ -100,7 +160,7 @@
         font-size: 12px;
         margin-bottom: 10px;
      }
-
+   
      #gift{
         display: flex;
      }
@@ -217,7 +277,60 @@
             
         }
 
+        .mega-box div header:hover{
+            color: black;
+        
+        }
 
+        .mega-box div a:hover{
+            border-bottom: solid 2px #ff9797;
+           
+        
+        }
+
+    
+
+      
+        
+
+        .navbar>ul>li:nth-child(1):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+            
+        }
+        .navbar>ul>li:nth-child(2):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(3):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(4):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(5):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(6):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(7):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(8):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+        .navbar>ul>li:nth-child(9):hover{
+            border-bottom: solid 2px #ff9797;
+            transition: left 250ms ease-in-out, right 250ms ease-in-out;
+        }
+       
         /* navbar hovering div section */
 
         .mega-box{
@@ -265,6 +378,7 @@
         
         .banner1 img{
             width: 100%;
+            
         }
 
         /* carousel 1 */
@@ -297,6 +411,11 @@
         
         #h1S{
             text-align: center;
+            color: #333333;
+            
+            
+            
+            
         }
 
 
@@ -337,6 +456,9 @@
 
         #ls2{
             text-align: center;
+            color: #333333;
+            
+            
         }
         #latest{
             display: grid;
@@ -377,6 +499,7 @@
 
         #ES1{
             text-align: center;
+            color: #333333;
         }
 
         #essential div h4{
@@ -397,10 +520,16 @@
         #CS1{
             text-align: center;
             margin-top: 50px;
+            color: #333333;
         }
         
         #category div h4{
             text-align: center;
+        }
+        #category div img:hover{
+            transform: scale3d(1.05,1.05,1.05);
+            transition: .3s ease-in-out;
+
         }
 
         /* banner 3 */
@@ -436,6 +565,7 @@
         #k2{
             text-align: center;
             margin-top: 80px;
+            color: #333333;
         }
         
         #kits div p , #kits div h4{
@@ -547,7 +677,16 @@
             font-size: 14px;
             font-weight: 300;
             color: black;
+            
            
+        }
+        #footertop div p a:hover{
+            border: #ff9797;
+           
+        }
+
+        #footer div p:hover{
+           color: #ff9797;
         }
 
         /* the end of the dashboard */
@@ -635,12 +774,15 @@
 
         #shortcut ul a{
             text-decoration: none;
+            color: black;
+            margin-left: -10px;
             
         }
 
         #make{
             text-align: center;
             font-size: 50px;
+            color: #333333;
             
         }
 
@@ -650,6 +792,7 @@
             width: 90%;
             margin: auto;
             gap: 100px;
+            margin-bottom: 50px;
         }
 
         #products div img{
@@ -679,3 +822,270 @@
             font-family: sans-serif;
             font-weight: lighter;
         }
+
+        #products div button{
+            background-color: black;
+            color: white;
+            width: 100px;
+            font-family: sans-serif;
+            padding: 5px;
+        }
+
+        #cartimg{
+            width: 100%;
+            margin-left: 50px;
+        }
+
+        #head{
+            text-align: center;
+            color: #70737a;
+        }
+
+        
+        #cartcontainer div img{
+            width: 200px;
+            overflow: hidden;
+            
+        }
+
+        #cartcontainer div img:hover{
+            transform: scale3d(1.05,1.05,1.05);
+            transition: .3s ease-in-out;
+        }
+
+        #cartcontainer{
+            width: 90%;
+            margin: auto;
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            gap: 20px;
+        }
+        #cartcontainer div h3{
+            font-size: 19px;
+           
+            font-family: sans-serif;
+        }
+
+        #cartcontainer div p{
+            font-family: sans-serif;
+            font-size: 20px;
+            color: #70737a;
+        }
+
+        #cartcontainer div h4{
+            font-size: 30px;
+            font-family: sans-serif;
+            font-weight: lighter;
+        }
+
+        #cartcontainer div button{
+            background-color: black;
+            color:  white;
+            width: 100px;
+            margin-left: 10px;
+         
+        }
+        #cartcontainer div span{
+            margin-left: 10px;
+        }
+
+        #grand{
+            text-align: center;
+        }
+       
+        #checkout {
+          width: 90%;
+          margin: auto;
+        }
+
+        #checkout button{
+            background-color: black;
+            color: white;
+                margin-top: 60px;
+                margin-bottom: 50px;
+                margin-left: 500px;
+                width: 200px;
+                height: 50px;
+                border-radius: 5px;
+                box-shadow: 0px 0px 10px 3px #ccc;
+        }
+
+
+        /* product page */
+
+        /* navbar */
+
+        #Nav ul{
+            float: left;
+            font-size: smaller;
+            
+        }
+        #Nav ul a{
+            text-decoration: none;
+            color: black;
+            
+        }
+
+
+        #Nav{
+            margin-left: 250px;
+        }
+
+        #container{
+            display: flex;
+            width: 90%;
+            margin: auto;
+        }
+
+        #hoverimg{
+            width: 400px;
+            height: 500px;
+            margin-left: 100px;
+        }
+        #hoverimg img{
+          width: 100%;
+          width: 300px;
+          padding: 40px;
+          
+        }
+        #hoverimg img:hover{
+            transition: bottom .3s ease-out 0s;
+        }
+
+        #pro{
+            width: 600px;
+        }
+
+        #pro h1{
+            font-size: 20px;
+            font-weight: 600;
+            color: #373738;
+        }
+
+        #pro h2{
+            font-size: 15px;
+            color: #909090;
+        }
+        #pro h3{
+            font-size: 25px;
+        }
+        
+        #pro span{
+            font-size: 20px;
+            color: #333333;
+            font-weight: bold;
+            
+        }
+
+        #shades{
+            display: grid;
+            grid-template-columns: repeat(6 , 1fr);
+            margin-right: 100px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        #pro p{
+            font-size: 13px;
+            margin-bottom: 10px;
+            font-family: sans-serif;
+            color: #333333;
+        }
+
+        #pro h4{
+            font-size: 24px;
+            margin-bottom: -10px;
+            
+        }
+
+        #spa{
+            margin-top: 20px;
+
+        }
+
+        #spa button{
+            color: #333333;
+            background-color: white;
+        }
+
+        #bag{
+            background-color: black;
+            color:  white;
+            width: 100px;
+            margin-left: 10px;
+            border-radius: 3px;
+            margin-right: 30px;
+        }
+
+
+        /* Payment Page */
+
+        #pay{
+            width: 90%;
+            margin: auto;
+        }
+
+        #pay div{
+            /* margin-left: 35%; */
+            margin-bottom: 50px;
+        }
+
+        .payd{
+            text-align: center;
+            font-size: 30px;
+        }
+        #pay div select{
+            margin-left: 534px;
+        }
+     
+
+        #place{
+            margin-left: 42%;
+            width: 220px;
+            background-color: black;
+            color: white;
+            height: 25px;
+            font-size: 20px;
+            border-radius: 3px;
+            margin-bottom: 50px;
+        }
+
+        #pay div input{
+            width: 300px;
+            height: 30px;
+            margin-left: 450px;
+        }
+
+        #payi{
+            margin-left: 20px;
+            border: 1px solid red;
+        }
+
+        /* customer review */
+
+        #response{
+            width: 100%;
+            margin: auto;
+            
+        }
+        #response div h1{
+            text-align: center;
+            font-family: sans-serif;
+            color: #333333;
+        }
+
+        #response div input{
+            width: 505px;
+            height: 50px;
+            font-size: 20px;
+            margin-left: 30%;
+        }
+        #response div button{
+            height: 51px;
+            width: 100px;
+            background-color: black;
+            color: white;
+            font-size: 20px;
+        }
+
+        
